--- a/gb/23/1/2/n13897738.md
+++ b/gb/23/1/2/n13897738.md
@@ -1,38 +1,39 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：摄影师惊喜邂逅知名的加拿大灰熊</h2>
-<a href="https://d2frcdcjb0c6wq.cloudfront.net/I6vJHBdYr"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897902-Jason-Leo-Bantle-4-600x400.jpg" />///image2=```diff
+- 加拿大一位野生动物摄影师前不久在班夫国家公园偶然遇到了该地区最著名的一只名为“老板”的大灰熊，令他惊喜不已。（Jason Leo Bantle提供）
+```
 <h6>加拿大一位野生动物摄影师前不久在班夫国家公园偶然遇到了该地区最著名的一只名为“老板”的大灰熊，令他惊喜不已。（Jason Leo Bantle提供）
 </h6>
 <hr>
-	<p>【大纪元2023年01月02日讯】（英文大纪元记者Louise Chambers报导／张雨霏编译）前不久，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>一位野生动物<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%91%84%E5%BD%B1%E5%B8%88.md#1">摄影师</a>驾车出门办事，途中偶然遇到了该地区最著名的一只体型巨大的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%B0%E7%86%8A.md#1">灰熊</a>，并拍下一系列一生难得一见的照片和视频。</p>
-<p>50岁的杰森?里奥?班特尔（Jason Leo Bantle）居住在阿尔伯塔省的坎莫尔小镇，他是一名专门研究大型食肉动物的训练有素的生物学家，也是名为All in the Wild的连锁画廊的创始人兼<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%91%84%E5%BD%B1%E5%B8%88.md#1">摄影师</a>，在阿尔伯塔省、安大略省和他的家乡萨斯喀彻温省均设有画廊点。</p>
-<p>日前，他在前往荒野的路上，注意到在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8F%AD%E5%A4%AB%E5%9B%BD%E5%AE%B6%E5%85%AC%E5%9B%AD.md#1">班夫国家公园</a>和露易丝湖之间的马路上有动物经过的足迹。他告诉《大纪元时报》，他把车停好，下车后很快就认出了那是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%B0%E7%86%8A.md#1">灰熊</a>的脚印。</p>
-<figure id="attachment_13897900" aria-describedby="caption-attachment-13897900" style="width: 399px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897900-Jason-Leo-Bantle-2.jpg"><img class=" wp-image-13897900" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897900-Jason-Leo-Bantle-2.jpg" alt="" width="399" b="599" /></a><figcaption id="caption-attachment-13897900" class="wp-caption-text">（Jason Leo Bantle提供）</figcaption></figure>
+	<p>【大纪元2023年01月02日讯】（英文大纪元记者Louise Chambers报导／张雨霏编译）前不久，加拿大一位野生动物摄影师驾车出门办事，途中偶然遇到了该地区最著名的一只体型巨大的灰熊，并拍下一系列一生难得一见的照片和视频。</p>
+<p>50岁的杰森?里奥?班特尔（Jason Leo Bantle）居住在阿尔伯塔省的坎莫尔小镇，他是一名专门研究大型食肉动物的训练有素的生物学家，也是名为All in the Wild的连锁画廊的创始人兼摄影师，在阿尔伯塔省、安大略省和他的家乡萨斯喀彻温省均设有画廊点。</p>
+<p>日前，他在前往荒野的路上，注意到在班夫国家公园和露易丝湖之间的马路上有动物经过的足迹。他告诉《大纪元时报》，他把车停好，下车后很快就认出了那是灰熊的脚印。</p>
+<figure id="attachment_13897900" aria-describedby="caption-attachment-13897900" style="width: 399px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897900-Jason-Leo-Bantle-2.jpg"><img decoding="async" class=" wp-image-13897900" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897900-Jason-Leo-Bantle-2.jpg" alt="" width="399" b="599" /></a><figcaption id="caption-attachment-13897900" class="wp-caption-text">（Jason Leo Bantle提供）</figcaption></figure>
 <p>班特尔小心翼翼地沿着熊的足迹找到了它们的源头，并在100米外发现了一个洞穴。</p>
 <p>“它曾在原木下寻找地松鼠”，他说，“它蜿蜒崎岖的路径让我意识到它肯定是在寻找食物。我回到我的车里，开始沿着这条路继续朝着我的目的地前行。大概行驶不到一公里，突然间，我用眼角的余光捕捉到一个不同寻常的身影。”</p>
-<p>原来是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8F%AD%E5%A4%AB%E5%9B%BD%E5%AE%B6%E5%85%AC%E5%9B%AD.md#1">班夫国家公园</a>最著名、最强大可畏的名为“老板”（The Boss）的灰熊正在靠近道路的一根原木下挖掘食物。“老板”是一只二十多岁的成年雄性灰熊，被认为是公园里最大的熊，估计重达660磅（300公斤）。</p>
-<figure id="attachment_13897899" aria-describedby="caption-attachment-13897899" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897899-Jason-Leo-Bantle-1.jpg"><img class=" wp-image-13897899" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897899-Jason-Leo-Bantle-1.jpg" alt="" width="599" b="399" /></a><figcaption id="caption-attachment-13897899" class="wp-caption-text">（Jason Leo Bantle提供）</figcaption></figure>
+<p>原来是班夫国家公园最著名、最强大可畏的名为“老板”（The Boss）的灰熊正在靠近道路的一根原木下挖掘食物。“老板”是一只二十多岁的成年雄性灰熊，被认为是公园里最大的熊，估计重达660磅（300公斤）。</p>
+<figure id="attachment_13897899" aria-describedby="caption-attachment-13897899" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897899-Jason-Leo-Bantle-1.jpg"><img decoding="async" class=" wp-image-13897899" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897899-Jason-Leo-Bantle-1.jpg" alt="" width="599" b="399" /></a><figcaption id="caption-attachment-13897899" class="wp-caption-text">（Jason Leo Bantle提供）</figcaption></figure>
 <p>“这只熊的活动范围达到2,500平方公里”，他说，“几年前，公园工作人员给它戴上了无线电项圈，在春天，它的活动量非常大，为了找到雌性伴侣，它几乎走遍山谷的各个角落，它非常强壮，具有很好的遗传基因。”</p>
 <p>班特尔说“老板”设法在一个有很多竞争对手的生态系统中生活。根据DNA分析，山谷中一半以上的幼崽都是它的孩子。”</p>
 <p>“我使用最长的长焦镜头，拍到了一张它掘地的照片”，他说，“它抬头看了看我的相机，我抓住机会马上拍了6到10张照片。当它穿过草地时，我又拍下了几张照片和视频，它不知道我在那儿，只是专注于做自己想做的事情。”</p>
-<figure id="attachment_13897902" aria-describedby="caption-attachment-13897902" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897902-Jason-Leo-Bantle-4.jpg"><img class=" wp-image-13897902" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897902-Jason-Leo-Bantle-4.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13897902" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>一位野生动物摄影师前不久在班夫国家公园偶然遇到了该地区最著名的一只名为“老板”的大灰熊，令他惊喜不已。（Jason Leo Bantle提供）</figcaption></figure>
+<figure id="attachment_13897902" aria-describedby="caption-attachment-13897902" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897902-Jason-Leo-Bantle-4.jpg"><img decoding="async" class=" wp-image-13897902" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897902-Jason-Leo-Bantle-4.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13897902" class="wp-caption-text">加拿大一位野生动物摄影师前不久在班夫国家公园偶然遇到了该地区最著名的一只名为“老板”的大灰熊，令他惊喜不已。（Jason Leo Bantle提供）</figcaption></figure>
 <p>当“老板”漫步回到森林后，班特尔去吃午饭，饭后他还不舍得离去，决定再返回灰熊刚刚出没的地方看一看。大约一小时后，这只灰熊真的又出现了。</p>
 <p>他说他们的第二次相遇“同样不错甚至更好”，后来他在<ahref="https://www.instagram.com/jasonleobantle/?hl=en">Instagram</a>上分享了他的最佳照片。他告诉本报：“这对我来说是一个非常重要的时刻，亲眼目睹了那只熊的力量和威严。”</p>
 <p>上世纪九十年代后期，班特尔在加拿大读研究生时开始从事摄影工作，18年前成为了一名专业摄影师。最重要的是，他在实践中将他的生物学专业知识与在摄影领域的技能相结合。在中共病毒（新冠病毒）疫情大流行之前，他一直在研究加拿大北极地区驯鹿数量下降的问题。</p>
-<figure id="attachment_13897901" aria-describedby="caption-attachment-13897901" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897901-Jason-Leo-Bantle-3.jpg"><img class=" wp-image-13897901" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897901-Jason-Leo-Bantle-3.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13897901" class="wp-caption-text">野生动物摄影师班特尔。（Jason Leo Bantle提供）</figcaption></figure>
+<figure id="attachment_13897901" aria-describedby="caption-attachment-13897901" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13897901-Jason-Leo-Bantle-3.jpg"><img decoding="async" class=" wp-image-13897901" src="https://i.epochtimes.com/assets/uploads/2023/01/id13897901-Jason-Leo-Bantle-3.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13897901" class="wp-caption-text">野生动物摄影师班特尔。（Jason Leo Bantle提供）</figcaption></figure>
 <p>班夫国家公园只剩下65只灰熊，班特尔认为当地的保护工作至关重要。他将All in the Wild画廊销售收入的一部分捐赠给相关的动物保护部门。</p>
 <p>他说：“我认为我们正在努力讲述这些动物的故事，并试图将人们与这些动物联系起来，希望我们能进一步意识到我们是自然环境的一部分。这些动物有权像我们一样平等地生活在这个星球上。”</p>
 </p>
-<blockquote class=""></blockquote><a href="https://d2frcdcjb0c6wq.cloudfront.net/I6vJHBdYr"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/ins.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 540px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/reel/CkywovXpPn8/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14">
+<blockquote class=""></blockquote><a href="https://d2wf95os3tobj4.cloudfront.net/U3rJHBdYw"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/ins.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 540px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/reel/CkywovXpPn8/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14">
 <div style="padding: 16px;">
 <div style="display: flex; flex-direction: row; align-items: center;"></div>
 <div style="padding: 19% 0;"></div>
 <div style="display: block; height: 50px; margin: 0 auto 12px; width: 50px;"></div>
 <div style="padding-top: 8px;">
 <div style="color: #3897f0; font-family: Arial,sans-serif; font-size: 14px; font-style: normal; font-weight: 550; line-height: 18px;">View this post on Instagram</div>
-</div>
 <div style="padding: 12.5% 0;"></div>
 <div style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;"></div>
 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center; margin-bottom: 24px;"></div>
@@ -43,44 +44,35 @@
 <p>责任编辑：韩玉 #</p>
 	
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/27/n13811340.md#1">罕见一幕 加州棕熊树林里“铺床”睡大觉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/31/n13814384.md#1">组图：北极熊在夏日花丛中嬉戏的罕见画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/30/n13876108.md#1">组图：可爱小熊懒洋洋躺树林间等妈妈捕鱼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/10/n13882029.md#1">组图：北极熊妈妈和幼崽相互依偎 画面温馨</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/27/n13811340.md#1">罕见一幕 加州棕熊树林里“铺床”睡大觉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/31/n13814384.md#1">组图：北极熊在夏日花丛中嬉戏的罕见画面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/30/n13876108.md#1">组图：可爱小熊懒洋洋躺树林间等妈妈捕鱼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/10/n13882029.md#1">组图：北极熊妈妈和幼崽相互依偎 画面温馨</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284443.md#1" target="_blank">林辉：受蒋介石赞赏的“苗王”被逼自杀背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li><hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11405058.md#1" target="_blank">生死劫后 中共酷刑幸存者吁中国人了解真相</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/15/n14016434.md#1">为阻儿子变性 华裔母亲六年艰辛寻出路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14015742.md#1">UFO来自另外空间？ 美前情报官曝惊人言论</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/13/n14015033.md#1">“寺”和“庙”有什么区别</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/16/n14017550.md#1">美国民众目击报告：F-16战机与UFO缠斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/15/n14016604.md#1">组图：研究证实印度的嫁妆陋习愈演愈烈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019612.md#1">【十字路口】史上最大骗局 加密货币女王生死谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14019181.md#1">【中国禁闻】布林肯访华 美中关键歧见难调和</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019470.md#1">【全球新闻】布习会分歧激烈 中共再拒军事沟通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011350.md#1">逛夏天的Costco 消费专家推荐买八样东西</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018244.md#1">布林肯和秦刚会面5个半小时 双方分歧未解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018469.md#1">布林肯和秦刚会面 美中声明对比</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14018743.md#1">黄子佼认性骚扰后送医 孟耿如：会陪他一起面对</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018101.md#1">台原民歌手万沙浪今晨离世 享寿74岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018472.md#1">孙俪为丈夫庆父亲节 曝邓超近期全职主夫生活</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018168.md#1">60岁翁家明戏外热血 雨天海泳绿岛外圈26公里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14019215.md#1">张国立儿子张默疑“润”到泰国 近照沧桑颓废</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14016288.md#1">口臭原因知多少？一味中药可除臭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/17/n14018082.md#1">这种食物中常见的“致癌物”可能有益健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/5/n14010398.md#1">欧洲禁止、美国允许使用的这种食品添加剂安全吗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14018792.md#1">如何赶走恼人的蚊子？ 专家教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14018682.md#1">中美买房6大差异 没搞懂吃大亏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308560.md#1">【车评】红章的“R” 2024 Honda Civic Type R</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/2/n13897738.htm">组图：摄影师惊喜邂逅知名的加拿大灰熊</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897738.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/2/n13897738.htm">组图：摄影师惊喜邂逅知名的加拿大灰熊</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/2/n13897738.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
